--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/rz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rize</title>
+        <link rel="stylesheet" href="./src/index.css">
+    <title>AKA RCHIVE</title>
   </head>
   <body>
     <div id="root"></div>
