--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/rz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./src/index.css">
+        <!-- <link rel="stylesheet" href="./src/index.css"> -->
     <title>AKA RCHIVE</title>
   </head>
-  <body>
+  <body style="background: #09090b;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
